--- a/resources/public/html/index.html
+++ b/resources/public/html/index.html
@@ -1,19 +1,16 @@
 <html>
-    <head>
-        <style>
-            ul li input {
-                width: 400px;
-            }
-            ul li button {
-                margin-left: 10px;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="app"></div>
-        <script src="http://fb.me/react-0.9.0.js"></script>
-        <script src="js/out/goog/base.js" type="text/javascript"></script>
-        <script src="js/main.js" type="text/javascript"></script>
-        <script type="text/javascript">goog.require("gum.core");</script>
-    </body>
+  <head>
+  </head>
+  <body>
+    <object id="plugin0" type="application/x-temwebrtcplugin" width="0" height="0">
+      <param name="onload" value="TemInitPlugin0" />
+      <param name="pluginId" value="plugin0" />
+    </object>
+    <div id="container"></div>
+    <script src="http://fb.me/react-0.9.0.js"></script>
+    <script src="js/out/goog/base.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
+    <script type="text/javascript">goog.require("gum.core");</script>
+    <script src="js/vendor/adapter.js"></script>
+  </body>
 </html>
